--- a/index.html
+++ b/index.html
@@ -30,21 +30,20 @@
       <nav class="navbar navbar-default navbar-fixed-top" id="navbar">
         <div class="container-fluid">
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span> 
             </button>
           <img alt="Brand" src="img/pageicon.png" id="logo">
-          <a class="navbar-brand" href="#/home">Yutong Pan</a>         
+          <a class="navbar-brand" href="#">Yutong Pan</a>         
           </div>
           <div class="collapse navbar-collapse" id="myNavbar">
             <ul class="nav navbar-nav navbar-right">
-              <li><a ui-sref="home" href="#">Home</a></li>
-              <li><a ui-sref="projects" href="#">Projects</a></li>
-<!--               <li><a ui-sref="skills" href="#">Skills</a></li>  -->
-              <li><a ui-sref="about" href="#">About</a></li> 
-              <li><a ui-sref="contact" href="#">Contact</a></li>
+              <li><a ui-sref="home" href="#" data-toggle="collapse" data-target=".navbar-collapse.in">Home</a></li>
+              <li><a ui-sref="projects" href="#" data-toggle="collapse" data-target=".navbar-collapse.in">Projects</a></li>
+              <li><a ui-sref="about" href="#" data-toggle="collapse" data-target=".navbar-collapse.in">About</a></li> 
+              <li><a ui-sref="contact" href="#" data-toggle="collapse" data-target=".navbar-collapse.in">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -54,23 +53,13 @@
         <!-- This is where your content will display -->
         <div ui-view></div>
 
-
-    <!--   <div id="icon">
-        <a href="https://twitter.com/fireangelP" target="_blank"><i class="fa fa-twitter fa-3x"></i></a> 
-        <a href="tel:206-660-7971"><i class="fa fa-phone fa-3x"></i></a>
-        <a href="https://github.com/angelpyt"><i class="fa fa-github-alt fa-3x"></i></a>
-        <a href="https://www.facebook.com/angel.pan.1656"><i class="fa fa-facebook fa-3x"></i></a>
-        <a href="mailto:yutonp@uw.edu"><i class="fa fa-envelope fa-3x"></i></a>
-      </div> -->
       <footer>
-        <ul class="nav navbar-nav navbar-left" id="navbottom">
+<!--         <ul class="nav navbar-nav navbar-left" id="navbottom">
           <li><a ui-sref="home" style = "color: black" href="#">Home</a></li>
           <li><a ui-sref="projects" style = "color: black" href="#">Projects</a></li>
-<!--           <li><a ui-sref="skills" href="#">Skills</a></li>  -->
           <li><a ui-sref="about" style = "color: black" href="#">About</a></li>
           <li><a ui-sref="contact" style = "color: black" href="#">Contact</a></li>
-        </ul>
-
+        </ul> -->
         <div id="coby">
           <p>&copy;Cobyright 2015 · Yutong Pan</p>
         </div>
